--- a/css/css_guest/main.css
+++ b/css/css_guest/main.css
@@ -530,7 +530,7 @@ h6 {
   .navmenu .dropdown .dropdown ul {
     top: 0;
     left: -90%;
-    visibility: hidden;
+    visibility: visible;
   }
 
   .navmenu .dropdown .dropdown:hover > ul {
