--- a/css/css_guest/main.css
+++ b/css/css_guest/main.css
@@ -37,7 +37,7 @@
     255,
     0.6
   ); /* The default color of the main navmenu links */
-  --nav-hover-color: #0d42ff; /* Applied to main navmenu links when they are hovered over or active */
+  --nav-hover-color: #ffffff; /* Applied to main navmenu links when they are hovered over or active */
   --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
   --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
   --nav-dropdown-color: #212529; /* Used for navigation links of the dropdown items in the navigation menu. */
@@ -486,12 +486,10 @@ h6 {
     background: var(--nav-dropdown-background-color);
     display: block;
     position: absolute;
+    visibility: hidden;
     left: 14px;
     top: 130%;
-    /*      visibility: hidden;
-        opacity: 0; */
-    visibility: visible;
-    opacity: 1;
+    opacity: 0;
     transition: 0.3s;
     border-radius: 4px;
     z-index: 99;
@@ -512,32 +510,31 @@ h6 {
   .navmenu .dropdown ul a i {
     font-size: 12px;
   }
-  /* 
-    .navmenu .dropdown ul a:hover,
-    .navmenu .dropdown ul .active:hover,
-    .navmenu .dropdown ul li:hover > a {
-        color: var(--nav-dropdown-hover-color);
-    }
 
-    .navmenu .dropdown:hover > ul {
-        opacity: 1;
-        top: 100%;
-        visibility: visible;
-    }
+  .navmenu .dropdown ul a:hover,
+  .navmenu .dropdown ul .active:hover,
+  .navmenu .dropdown ul li:hover > a {
+    color: var(--nav-dropdown-hover-color);
+  }
 
- */
-  .navmenu .dropdown .dropdown ul {
-    top: 0;
-    left: -90%;
+  .navmenu .dropdown:hover > ul {
+    opacity: 1;
+    top: 100%;
     visibility: visible;
   }
 
-  /*  .navmenu .dropdown .dropdown:hover > ul {
-        opacity: 1;
-        top: 0;
-        left: -100%;
-        visibility: visible;
-    } */
+  .navmenu .dropdown .dropdown ul {
+    top: 0;
+    left: -90%;
+    visibility: hidden;
+  }
+
+  .navmenu .dropdown .dropdown:hover > ul {
+    opacity: 1;
+    top: 0;
+    left: -100%;
+    visibility: visible;
+  }
 }
 
 /* Navmenu - Mobile */
